--- a/VLDBJ/ACQ.tex
+++ b/VLDBJ/ACQ.tex
@@ -47,6 +47,7 @@ grestore
 \usepackage{hyperref}
 \usepackage{amsthm}
 \usepackage{indentfirst}
+\usepackage{times}
 
 \renewcommand{\arraystretch}{1.18}
 \newtheorem{variant}{Variant}
