--- a/VLDBJ/variant.tex
+++ b/VLDBJ/variant.tex
@@ -66,7 +66,7 @@ Finally, we output $G_k[S]$ as the target AC, if it exists (line 5).
 
 \subsection{ACQ-M}
 
-To extend the ACQ query for supporting mutiple query vertices, we propose Problem~\ref{ACQ-M} as follows.
+To extend the ACQ query for supporting mutiple query vertices to narrow the size of targeted ACs, we propose Problem~\ref{ACQ-M} as follows.
 
 %\begin{variant}
 \begin{problem}
