--- a/VLDBJ/ACQ.bib
+++ b/VLDBJ/ACQ.bib
@@ -416,8 +416,25 @@
 @inproceedings{yang2013community,
   title={Community detection in networks with node attributes},
   author={Yang, Jaewon and McAuley, Julian and Leskovec, Jure},
-  booktitle={Data Mining (ICDM), 2013 IEEE 13th international conference on},
+  booktitle={ICDM},
   pages={1151--1156},
-  year={2013},
-  organization={IEEE}
+  year={2013}
+}
+
+@article{chenghui,
+  title={On querying historical evolving graph sequences},
+  author={Ren, Chenghui and Lo, Eric and Kao, Ben and Zhu, Xinjie and Cheng, Reynold},
+  journal={VLDB},
+  volume={4},
+  number={11},
+  pages={726--737},
+  year={2011}
+}
+@inproceedings{kddEvolving,
+ author = {Bahmani, Bahman and Kumar, Ravi and Mahdian, Mohammad and Upfal, Eli},
+ title = {PageRank on an Evolving Graph},
+ booktitle = {KDD},
+ year = {2012},
+ pages = {24--32},
+ numpages = {9},
 }
