--- a/VLDBJ/effectiveness.tex
+++ b/VLDBJ/effectiveness.tex
@@ -91,7 +91,7 @@ We consider both keyword and structure for evaluating community quality.
 
 {\bf 3. Comparison with existing CS methods.}
 The existing methods mainly focus on non-attributed graphs. We implement two state-of-the-art methods:
-{\tt Global}~\cite{KDD2010} and {\tt Local}~\cite{local2014}. Both of them use the metric minimum degree, we thus focus on the keyword cohesiveness. Figure~\ref{fig:search-comp} shows the CMF and CPJ values on four datasets. We can see that the keyword cohesiveness of {\tt ACQ} is superior to both {\tt Global} and {\tt Local}, because {\tt ACQ} considers vertex keywords, while {\tt Global} and {\tt Local} do not.
+{\tt Global}~\cite{KDD2010} and {\tt Local} \cite{local2014}. Both of them use the metric minimum degree, we thus focus on the keyword cohesiveness. Figure~\ref{fig:search-comp} shows the CMF and CPJ values on four datasets. We can see that the keyword cohesiveness of {\tt ACQ} is superior to both {\tt Global} and {\tt Local}, because {\tt ACQ} considers vertex keywords, while {\tt Global} and {\tt Local} do not.
 
 \begin{figure}[ht]
     \centering
