--- a/VLDBJ/ACQ.bib
+++ b/VLDBJ/ACQ.bib
@@ -35,12 +35,14 @@
 	author={Cui, Wanyun and Xiao, Yanghua and Wang, Haixun and Lu, Yiqi and Wang, Wei},
 	Booktitle = {SIGMOD},
 	Title = {Online search of overlapping communities},
+    pages = {277--288},
 	Year = {2013}}
 
 @inproceedings{local2014,
 	author={Cui, Wanyun and Xiao, Yanghua and Wang, Haixun and Wang, Wei},
 	Booktitle = {SIGMOD},
 	Title = {Local search of communities in large graphs},
+    pages={991--1002},
 	Year = {2014}}
 
 @inproceedings{k-truss2014,
@@ -366,9 +368,12 @@
 
 @article{fangeffective,
   title={Effective Community Search over Large Spatial Graphs},
-  author={Fang, Yixiang and Cheng, Reynold and Li, Xiaodong and Luo, Siqiang and Hu, Jiafeng}
-  booktitle = {PVLDB},
-  year = {2016}
+  author={Fang, Yixiang and Cheng, Reynold and Li, Xiaodong and Luo, Siqiang and Hu, Jiafeng},
+  journal={PVLDB},
+  volume={10},
+  number={6},
+  pages={709--720},
+  year = {2017}
 }
 
 @inproceedings{mislove-2008-flickr,
@@ -437,4 +442,12 @@
  year = {2012},
  pages = {24--32},
  numpages = {9},
+}
+
+@inproceedings{hu2016querying,
+  title={Querying Minimal Steiner Maximum-Connected Subgraphs in Large Graphs},
+  author={Hu, Jiafeng and Wu, Xiaowei and Cheng, Reynold and Luo, Siqiang and Fang, Yixiang},
+  booktitle={CIKM},
+  pages={1241--1250},
+  year={2016},
 }
