--- a/VLDBJ/insertEdge.tex
+++ b/VLDBJ/insertEdge.tex
@@ -1,7 +1,7 @@
 \subsection{Edge Insertion}
 \label{sec:edgeInsertion}
 
-For the update of edge, i.e, inserting (deleting) an edge, it is not straightforward how to accordingly update the CL-tree efficiently. This is because, the insertion (deletion) of a single edge may trigger updates in several CL-tree nodes as well as their structures. We illustrate this by Example~\ref{eg:edgeInsertion}.
+For the update of edge, i.e, inserting (deleting) an edge, it is not straightforward update the CL-tree accordingly. This is because, the insertion (deletion) of a single edge may trigger updates in several CL-tree nodes as well as their structures. We illustrate this by Example~\ref{eg:edgeInsertion}.
 
 \begin{example}
 \label{eg:edgeInsertion}
