--- a/VLDBJ/ACQ.bib
+++ b/VLDBJ/ACQ.bib
@@ -366,6 +366,15 @@
   month = {May}
 }
 
+@article{fang2016effective,
+  title={Effective community search for large attributed graphs},
+  author={Fang, Yixiang and Cheng, Reynold and Luo, Siqiang and Hu, Jiafeng},
+  journal={PVLDB},
+  volume={9},
+  number={12},
+  pages={1233--1244},
+  year={2016}
+
 @article{fangeffective,
   title={Effective Community Search over Large Spatial Graphs},
   author={Fang, Yixiang and Cheng, Reynold and Li, Xiaodong and Luo, Siqiang and Hu, Jiafeng},
