--- a/VLDBJ/query2.tex
+++ b/VLDBJ/query2.tex
@@ -43,8 +43,8 @@ In this paper, we use the well-known FP-Growth algorithm~\cite{han2000mining}.
 \end{figure}
 \begin{example}
 Consider a query vertex $Q$ ($k$=3, $S$=$\{v,x,y,z\}$) with 6 neighbors in Figure~\ref{fig:nghGraph},
-where the selected keywords of each vertex are listed in the curly braces.
-By FP-Growth, 8 candidate keyword sets) are generated, as shown in Figure~\ref{fig:nghCand}.
+where the selected keywords of each vertex are listed in curly braces.
+By FP-Growth, 8 candidate keyword sets are generated, as shown in Figure~\ref{fig:nghCand}.
 $\Psi_i$ denotes the set of keyword sets with sizes being $i$.
 \end{example}
 
