--- a/VLDBJ/related.tex
+++ b/VLDBJ/related.tex
@@ -15,8 +15,9 @@ Also, it is not clear how they can be adapted to perform online ACQ. In this pap
 To measure the structure cohesiveness of a community, the {\it minimum degree} is often used~\cite{KDD2010,local2014,vldb2015}. Sozio et al.~\cite{KDD2010} proposed the first algorithm {\tt Global} to find the $k$-$\widehat{core}$ containing $q$.
 Cui et al.~\cite{local2014} proposed {\tt Local}, which uses local expansion techniques to enhance the performance of {\tt Global}. We will compare these two solutions in our experiments.
 Other definitions, including $k$-clique~\cite{online-sigmod2013}, $k$-truss~\cite{k-truss2014} and edge connectivity~\cite{hu2016querying}, have also been considered for searching communities. A recent work~\cite{vldb2015} finds communities with high influence.  These works assume non-attributed graphs, and overlook the rich information of vertices that come with attributed graphs. As we will see, performing CS on attributed graphs is better than on non-attributed graphs.
+An earlier version of this paper can be found in~\cite{fang2016effective}.
 
-\textbf{Graph keyword search.}  Given an attributed graph $G$ and a set $Q$ of keywords, graph keyword search solutions output a tree structure, whose nodes are vertices of $G$, and the union of these vertices' keyword sets is a superset of $Q$~\cite{keyword-icde2002,keyword-icde2007,keyword-vldb2005}. Recent work studies the use of a subgraph of $G$ as the query output~\cite{keyword-vldb2011}. These works are substantially different from the ACQ problem. First, they do not specify query vertices as required by the ACQ problem. Second, the tree or subgraph produced do not guarantee structure cohesiveness. Third, keyword cohesiveness is not ensured; there is no mechanism that enforces query keywords to be shared among the keyword sets of all query output's vertices. Thus, these solutions are not designed to find ACs.
+\textbf{Graph keyword search.}  Given an attributed graph $G$ and a set $Q$ of keywords, graph keyword search solutions output a tree structure, whose nodes are vertices of $G$, and the union of these vertices' keyword sets is a superset of $Q$~\cite{keyword-icde2007,keyword-vldb2005}. Recent work studies the use of a subgraph of $G$ as the query output~\cite{keyword-vldb2011}. These works are substantially different from the ACQ problem. First, they do not specify query vertices as required by the ACQ problem. Second, the tree or subgraph produced do not guarantee structure cohesiveness. Third, keyword cohesiveness is not ensured; there is no mechanism that enforces query keywords to be shared among the keyword sets of all query output's vertices. Thus, these solutions are not designed to find ACs.
 
 %{\color{red}
 %\textbf{Graph pattern matching (GPM).}  Given a {\it pattern} $P$, the goal of GPM is to extract a set $R$ of subgraphs of $G$, where for every $r \in R$, $r$ is highly similar to $P$.
