--- a/VLDBJ/variant.tex
+++ b/VLDBJ/variant.tex
@@ -2,7 +2,7 @@
 \section{The ACQ-A and ACQ-M Problems}
 \label{variant}
 
-In this section, we introduce two variants of the ACQ problem, namely
+In this section, we introduce two problems related to the ACQ problem, namely
 {\it Approximate ACQ problem} (or ACQ-A) and {\it Multiple-vertex ACQ problem} (or ACQ-M).
 We also develop the query algorithms based on the CL-tree.
 
@@ -15,7 +15,6 @@ instead, they just need to share a predefined percentage of keywords in $S$.
 Thus, the keyword cohesiveness is relaxed.
 This could be useful for graphs if the keyword information of vertices is weak.
 
-%\begin{variant}
 \begin{problem}[ACQ-A]
 \label{ACQ-A}
 Given a graph $G$, a positive integer $k$, a vertex $q \in V$, a predefined keyword set $S$,
@@ -26,7 +25,6 @@ $\bullet$ \textbf{Connectivity}. $G_q \subseteq G$ is connected and $q\in G_q$;
 $\bullet$ \textbf{Structure cohesiveness}. $\forall$$v\in G_q$, $deg_{G_q}(v)\geq$$k$;
 
 $\bullet$ \textbf{Keyword cohesiveness}. $\forall v\in G_q$, it has at least $|S|\times \theta$ keywords in $S$.
-%\end{variant}
 \end{problem}
 
 We illustrate problem~\ref{ACQ-A} using Example~\ref{eg:ACQ-A}.
@@ -70,7 +68,6 @@ Finally, we output $G_k[S]$ as the target AC, if it exists (line 5).
 
 The ACQ-M problem generalizes the ACQ problem for supporting a set $Q$ of vertices, and it finds the ACs containing all the vertices in $Q$. We give its definition as follows.
 
-%\begin{variant}
 \begin{problem}
 \label{ACQ-M}
 Given a graph $G$, a positive integer $k$, a vertex set $Q$$\subseteq$$V$, and a predefined keyword set $S$, return a subgraph $G_Q$, the following properties hold:
@@ -80,7 +77,6 @@ $\bullet$ \textbf{Connectivity}. $G_Q \subseteq G$ is connected and $G_Q$ contai
 $\bullet$ \textbf{Structure cohesiveness}. $\forall$$v\in G_Q$, $deg_{G_Q}(v)\geq$$k$;
 
 $\bullet$ \textbf{Keyword cohesiveness}. The size of $L(G_Q, S)$ is maximal, where $L(G_Q, S)=\cap_{v \in G_Q}(W(v)\cap S)$ is the set of keywords shared in $S$ by all vertices of $G_Q$.
-%\end{variant}
 \end{problem}
 
 We illustrate Problem~\ref{ACQ-M} via Example~\ref{eg:ACQ-M}.
@@ -95,7 +91,7 @@ To answer the query in Problem~\ref{ACQ-M}, we can first find a set $S'$ of inte
 Finally, we can find the target ACs by any of previous ACQ algorithms.
 Following the above idea, we extend {\tt basic-g} and {\tt basic-w} and obtain two basic algorithms, i.e., {\tt basic-g-v2} and {\tt basic-w-v2}. We also extend {\tt Dec} and get an index based algorithm {\tt MDec}.
 Algorithm~\ref{alg:MDec} presents {\tt MDec}.
-Note that we do not extend {Inc-S} and {Inc-T}, as they are generally slower than {\tt Dec}, which has been demonstrated by the early version of this paper~\cite{fangeffective}.
+Note that we do not extend {Inc-S} and {Inc-T}, as they are generally slower than {\tt Dec}, which has been demonstrated by the earlier version of this paper~\cite{fang2016effective}.
 
 \begin{algorithm}[htp]
 \caption{Query algorithm: {\tt MDec}}
