NP-hard proof updates.

--- a/HierarchicalCommunity/paper/pcq.tex
+++ b/HierarchicalCommunity/paper/pcq.tex
@@ -5,7 +5,7 @@
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
 \usepackage{varwidth}
-\usepackage{url}
+\usepackage{url} 
 \usepackage{multirow}
 \usepackage{subfigure}
 \usepackage{mathtools}
@@ -20,6 +20,7 @@
 \newtheorem{lemma}{Lemma} 
 \newtheorem{proposition}{Proposition}
 \newtheorem{theorem}{Theorem} 
+\newtheorem{corollary}{Corollary}
 
 
 \renewcommand{\arraystretch}{1.18}
