--- a/HierarchicalCommunity/paper/pcq.tex
+++ b/HierarchicalCommunity/paper/pcq.tex
@@ -12,6 +12,7 @@
 \usepackage{amsmath,bm}
 \usepackage{hyperref}
 \usepackage{times}
+\usepackage{diagbox}
 
 \newtheorem{definition}{Definition}
 \newtheorem{variant}{Variant}
